--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <a class="site-title" href="{{ "/" | relative_url}}">
         {{ site.title | escape }}
-        <img src="../assets/logo.jpg" alt="Mountain View" style="width:304px;height:228px;">
+        <img src="logo.jpg" alt="Mountain View" style="width:304px;height:228px;">
     </a>
 
     <nav class="site-nav">
