--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
   <div class="wrapper">
 
     <a class="site-title" href="{{ "/" | relative_url}}">
-        {{ site.title | escape }}
-        <img src="logo.jpg" alt="Mountain View" style="width:304px;height:228px;">
+        <!--{{ site.title | escape }}-->
+        <img src="logo.jpg">
     </a>
 
     <nav class="site-nav">
