--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
 
     <img src="logo.jpg">
-    <a class="site-title" href="{{ "/" | relative_url}}">
+    <img src="logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
         <!--{{ site.title | escape }}-->
     </a>
 
