--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,9 @@
 
   <div class="wrapper">
 
-    <img src="logo.jpg">
     <img src="logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
         <!--{{ site.title | escape }}-->
-    </a>
+    </img>
 
     <nav class="site-nav">
       <span class="menu-icon">
