--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <img src="/logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
+    <img src="/blog/logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
         <!--{{ site.title | escape }}-->
     </img>
 
