--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 
   <div class="wrapper">
 
-    <img src="/blog/logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
-        <!--{{ site.title | escape }}-->
-    </img>
+    <a src="/blog/logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
+        <<!--{{ site.title | escape }}-->
+    </a>
 
     <nav class="site-nav">
       <span class="menu-icon">
