--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
 
   <div class="wrapper">
 
-    <a src="/blog/logo.jpg"  class="site-title" href="{{ "/" | relative_url}}">
-        <<!--{{ site.title | escape }}-->
+    <a class="site-title" href="{{ "/" | relative_url}}">
+        <img src="/blog/logo.jpg" >
+      <--{{ site.title | escape }}-->
     </a>
 
     <nav class="site-nav">
