--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <a class="site-title" href="{{ "/" | relative_url}}">
         <img src="/blog/logo.jpg" >
-      <--{{ site.title | escape }}-->
+      <!--{{ site.title | escape }}-->
     </a>
 
     <nav class="site-nav">
